tests/reference/ast_new-class_def2-c6db986.stderr
syntax error: Token 'pass' is unexpected here
  --> tests/parser/class_def2.py:31:24
   |
31 | class sub(np.ndarray): pass
   |                        ^^^^ 
